--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+  color: skyblue;
+}
+
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
+}
 .weather-app {
   background: white;
   max-width: 600px;
@@ -10,4 +18,74 @@ body {
   box-shadow: 0 30px 50px rgba(65, 50, , 100, 0.08);
   border-radius: 30px;
   padding: 30px;
+}
+
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 8px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+
+.search-form-button {
+  background: skyblue;
+  padding: 15px 20px;
+  margin-left: 5px;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  font-size: 16px;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  line-height: 20px;
+  color: rgba(39, 33, 66, 0.4);
+  font-weight: 200;
+}
+
+.weather-app-details strong {
+  color: skyblue;
+}
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+main {
+  padding: 30px 0;
+}
+.weather-app-temperature {
+  display: flex;
+}
+.weather-app-temperature-value {
+  font-size: 88px;
+  font-weight: 550;
+}
+
+.weather-app-icon {
+  font-size: 40px;
+  margin-top: 18px;
+}
+
+.weather-app-unit {
+  margin-top: 20px;
+  font-weight: 550;
+  font-size: 32px;
+}
+footer {
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-weight: 400;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
 }
