--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 40px;
-  margin-top: 18px;
+  width: 88px;
+  height: 88px;
 }
 
 .weather-app-unit {
