--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header {
   background: white;
   max-width: 600px;
   margin: 45px auto;
-  box-shadow: 0 30px 50px rgba(65, 50, , 100, 0.08);
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 30px;
   padding: 30px;
 }
@@ -93,8 +93,10 @@ main {
   margin-bottom: 10px;
 }
 .weather-forecast-icon {
-  font-size: 38px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 
 .weather-forecast-temperatures {
